# SpikingSudokuSolver

./: .gitignore  AUTHORS  CMakeLists.txt  README.md
cmake/: cypress_external.cmake
config/: 2X2parameters_BS.json  2X3parameters.json  2X4parameters.json  2X4parameters_curr.json  3X3parameters.json  3X3parameters_curr.json  3X4parameters.json  parameters.json  parameters_cube.json  parameters_mirror.json  parameters_mirror_spikey.json  single_neuron.json
scrape/: scrapeMultipleSudokus.py  scrapeSudoku.py
source/executable/: bruteForce.cpp  main.cpp  parameter_eval.cpp  parameter_sweep.cpp  testBruteForce.cpp  testSpikingSudokuSolver.cpp  testSpikingSudokuSolver_single.cpp
source/gui/: main.cpp  mainwindow.cpp  mainwindow.h  sudokumatrixwidget.cpp  sudokumatrixwidget.h
source/utils/: Sudoku.cpp  Sudoku.hpp  bruteForceSolver.cpp  bruteForceSolver.hpp  cube.py  remove_spikes.py  run.sh  spikingSudokuSolver.cpp  spikingSudokuSolver.hpp
sudokus/: 1x2.json  1x3.json  Test.json
sudokus/2x2/: Sudoku_0.json  Sudoku_1.json  Sudoku_10.json  Sudoku_11.json  Sudoku_12.json  Sudoku_13.json  Sudoku_14.json  Sudoku_15.json  Sudoku_16.json  Sudoku_17.json  Sudoku_18.json  Sudoku_19.json  Sudoku_2.json  Sudoku_20.json  Sudoku_21.json  Sudoku_22.json  Sudoku_23.json  Sudoku_24.json  Sudoku_25.json  Sudoku_26.json  Sudoku_27.json  Sudoku_28.json  Sudoku_29.json  Sudoku_3.json  Sudoku_30.json  Sudoku_31.json  Sudoku_32.json  Sudoku_33.json  Sudoku_34.json  Sudoku_35.json  Sudoku_36.json  Sudoku_37.json  Sudoku_38.json  Sudoku_39.json  Sudoku_4.json  Sudoku_40.json  Sudoku_41.json  Sudoku_42.json  Sudoku_43.json  Sudoku_44.json  (+59 more)
sudokus/2x3/: Sudoku_0.json  Sudoku_1.json  Sudoku_10.json  Sudoku_11.json  Sudoku_12.json  Sudoku_13.json  Sudoku_14.json  Sudoku_15.json  Sudoku_16.json  Sudoku_17.json  Sudoku_18.json  Sudoku_19.json  Sudoku_2.json  Sudoku_20.json  Sudoku_21.json  Sudoku_22.json  Sudoku_23.json  Sudoku_24.json  Sudoku_25.json  Sudoku_26.json  Sudoku_27.json  Sudoku_28.json  Sudoku_29.json  Sudoku_3.json  Sudoku_30.json  Sudoku_31.json  Sudoku_32.json  Sudoku_33.json  Sudoku_34.json  Sudoku_35.json  Sudoku_36.json  Sudoku_37.json  Sudoku_38.json  Sudoku_39.json  Sudoku_4.json  Sudoku_40.json  Sudoku_41.json  Sudoku_42.json  Sudoku_43.json  Sudoku_44.json  (+60 more)
sudokus/2x4/: Sudoku_0.json  Sudoku_1.json  Sudoku_10.json  Sudoku_11.json  Sudoku_12.json  Sudoku_13.json  Sudoku_14.json  Sudoku_15.json  Sudoku_16.json  Sudoku_17.json  Sudoku_18.json  Sudoku_19.json  Sudoku_2.json  Sudoku_20.json  Sudoku_21.json  Sudoku_22.json  Sudoku_23.json  Sudoku_24.json  Sudoku_25.json  Sudoku_26.json  Sudoku_27.json  Sudoku_28.json  Sudoku_29.json  Sudoku_3.json  Sudoku_30.json  Sudoku_31.json  Sudoku_32.json  Sudoku_33.json  Sudoku_34.json  Sudoku_35.json  Sudoku_36.json  Sudoku_37.json  Sudoku_38.json  Sudoku_39.json  Sudoku_4.json  Sudoku_40.json  Sudoku_41.json  Sudoku_42.json  Sudoku_43.json  Sudoku_44.json  (+60 more)
sudokus/3x3/: Sudoku_0.json  Sudoku_1.json  Sudoku_10.json  Sudoku_11.json  Sudoku_12.json  Sudoku_13.json  Sudoku_14.json  Sudoku_15.json  Sudoku_16.json  Sudoku_17.json  Sudoku_18.json  Sudoku_19.json  Sudoku_2.json  Sudoku_20.json  Sudoku_21.json  Sudoku_22.json  Sudoku_23.json  Sudoku_24.json  Sudoku_25.json  Sudoku_26.json  Sudoku_27.json  Sudoku_28.json  Sudoku_29.json  Sudoku_3.json  Sudoku_30.json  Sudoku_31.json  Sudoku_32.json  Sudoku_33.json  Sudoku_34.json  Sudoku_35.json  Sudoku_36.json  Sudoku_37.json  Sudoku_38.json  Sudoku_39.json  Sudoku_4.json  Sudoku_40.json  Sudoku_41.json  Sudoku_42.json  Sudoku_43.json  Sudoku_44.json  (+60 more)
sudokus/3x4/: Sudoku_0.json  Sudoku_1.json  Sudoku_10.json  Sudoku_12.json  Sudoku_13.json  Sudoku_14.json  Sudoku_15.json  Sudoku_16.json  Sudoku_17.json  Sudoku_18.json  Sudoku_19.json  Sudoku_2.json  Sudoku_20.json  Sudoku_21.json  Sudoku_22.json  Sudoku_23.json  Sudoku_24.json  Sudoku_25.json  Sudoku_26.json  Sudoku_27.json  Sudoku_28.json  Sudoku_29.json  Sudoku_3.json  Sudoku_30.json  Sudoku_31.json  Sudoku_32.json  Sudoku_33.json  Sudoku_34.json  Sudoku_35.json  Sudoku_36.json  Sudoku_37.json  Sudoku_38.json  Sudoku_39.json  Sudoku_4.json  Sudoku_40.json  Sudoku_41.json  Sudoku_42.json  Sudoku_43.json  Sudoku_44.json  Sudoku_45.json  (+59 more)
sudokus/4x4/: Sudoku_0.json  Sudoku_1.json  Sudoku_10.json  Sudoku_11.json  Sudoku_12.json  Sudoku_13.json  Sudoku_14.json  Sudoku_15.json  Sudoku_16.json  Sudoku_17.json  Sudoku_18.json  Sudoku_19.json  Sudoku_2.json  Sudoku_20.json  Sudoku_21.json  Sudoku_22.json  Sudoku_23.json  Sudoku_24.json  Sudoku_25.json  Sudoku_26.json  Sudoku_27.json  Sudoku_28.json  Sudoku_29.json  Sudoku_3.json  Sudoku_30.json  Sudoku_31.json  Sudoku_32.json  Sudoku_33.json  Sudoku_34.json  Sudoku_35.json  Sudoku_36.json  Sudoku_37.json  Sudoku_38.json  Sudoku_39.json  Sudoku_4.json  Sudoku_40.json  Sudoku_41.json  Sudoku_42.json  Sudoku_43.json  Sudoku_44.json  (+60 more)
sudokus/given_difficulty/2x2/: 2x2-hard.json
sudokus/given_difficulty/2x3/: 2x3-hard.json  2x3-harder.json  2x3-superhard.json  2x3-veryhard.json
sudokus/given_difficulty/2x4/: 2x4-hard.json  2x4-harder.json  2x4-superhard.json  2x4-veryhard.json
sudokus/given_difficulty/3x3/: 3x3-hard.json  3x3-harder.json  3x3-impossible.json  3x3-veryhard.json
sudokus/given_difficulty/3x4/: 3x4-hard.json  3x4-harder.json  3x4-veryhard.json
sudokus/given_difficulty/4x4/: 4x4-hard.json  4x4-harder.json  4x4-veryhard.json
test/: CMakeLists.txt
test/solver/: parameters.json  spikes.csv  test_solver.cpp
test/sudoku/: Test.json  test_sudoku.cpp
